--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,154 @@
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+    // border: 1px solid red;
+}
+
+
+body{
+    display: flex;
+}
+
+:root{
+    --light-white:#fafafa;
+    --light-black:#eeeeee;
+}
+
+button{
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+nav{
+    height: 100vh;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--light-white);
+    .top{
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        .user, .logo{
+            width: 35px;
+            height: 35px;
+        }
+        .user{
+            cursor: pointer;
+            border-radius: 50%;
+        }
+    }
+    .center{
+        margin-top: 24px;
+        flex: 1;
+    }
+    .bottom{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        button{
+            img{
+                width: 20px;
+            }
+        }
+    }
+}
+
+.messages{
+    width: 350px;
+    border-right:1px solid var(--light-black);
+    .top{
+        padding: 35px 20px 0 20px;
+        h2{
+            font-size: 23px;
+        }
+        .search{
+            width: 100%;
+            display: flex;
+            margin-top: 10px;
+            background-color: var(--light-black);
+            border-radius: 12px;
+            .left{
+                display: flex;
+                justify-content: center;
+                padding: 10px;
+                img{
+                    width: 18px;
+                }
+            }
+
+            .right{
+                width: 100%;
+                height: inherit;
+                input{
+                    width: 100%;
+                    height: 100%;
+                    border: none;
+                    outline: none;
+                    background-color: transparent;
+                    padding-right: 10px;
+                }
+            }
+        }
+    }
+
+    .bottom{
+        margin-top: 15px;
+        .user{
+            display: flex;
+            gap: 10px;
+            padding: 10px 20px;
+            transition: 0.5s;
+            cursor: pointer;
+            position: relative;
+            .left{
+                width: 36px;
+                .user-img{
+                    width: 36px;
+                    height: 36px;
+                    border-radius: 50%;
+                }
+                .online{
+                    width: 10px;
+                    position: absolute;
+                    margin-top: 24px;
+                    transform: translateX(-8px);
+                }
+            }
+
+            .center{
+                width: 250px;
+                .text{
+                    font-size: 0.8rem;
+                    opacity: 45%;
+                }
+            }
+
+            .right{
+                width: 40px;
+                p{
+                    float: right;
+                    opacity: 65%;
+                }
+                img{
+                    display: block;
+                    float: right;
+                    margin-top: 5px;
+                }
+            }
+
+            &:hover{
+                background-color: var(--light-black);
+            }
+        }
+    }
 }
