--- a/style.css
+++ b/style.css
@@ -195,6 +195,9 @@ nav .bottom button img {
 .chat {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .chat .chat-navbar {
   border-bottom: 1px solid var(--light-white);
@@ -228,27 +231,46 @@ nav .bottom button img {
 }
 .chat .message {
   background-color: var(--light-white);
-  padding: 0 20px;
+  padding: 10px 20px;
+  overflow-y: scroll;
+  flex: 1;
 }
-.chat .message .mes {
-  padding: 10px;
-  border-radius: 17px;
+.chat .message::-webkit-scrollbar {
+  display: none;
+}
+.chat .message .xabar {
+  padding: 8px;
+  border-radius: 12px;
   background-color: var(--gray);
+  width: -moz-fit-content;
+  width: fit-content;
+  max-width: 80%;
+  font-size: 0.9rem;
+  margin-top: 10px;
+}
+.chat .message .xabar:first-child {
+  margin: 0;
+}
+.chat .message .left {
+  float: right;
+  background-color: var(--green);
+  color: var(--white);
 }
 .chat .sender {
-  width: 100%;
   padding: 10px 20px;
   background-color: var(--white);
-  position: fixed;
   bottom: 0;
 }
 .chat .sender form {
   display: flex;
-  flex-wrap: nowrap;
   align-items: center;
   gap: 15px;
 }
+.chat .sender img {
+  cursor: pointer;
+}
 .chat .sender textarea {
+  width: auto;
   height: 36px;
   padding-top: 8px;
   padding-left: 10px;
@@ -260,7 +282,6 @@ nav .bottom button img {
   outline: none;
   border: 1px solid transparent;
   border-radius: 12px;
-  width: 60%;
   background-color: var(--light-white);
   transition: 0.3s;
   max-height: 25dvh;
