--- a/style.scss
+++ b/style.scss
@@ -212,12 +212,16 @@ nav {
 .chat {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   .chat-navbar {
     border-bottom: 1px solid var(--light-white);
     padding: 10px;
     display: flex;
     justify-content: space-between;
     height: 60px;
+    // position: fixed;
 
     .left {
       display: flex;
@@ -251,30 +255,50 @@ nav {
 
   .message {
     background-color: var(--light-white);
-    padding: 0 20px;
+    padding: 10px 20px;
+    overflow-y: scroll;
+    flex: 1;
 
-    .mes {
-      padding: 10px;
-      border-radius: 17px;
+    &::-webkit-scrollbar{
+      display: none;
+    }
+    .xabar {
+      padding: 8px;
+      border-radius: 12px;
       background-color: var(--gray);
+      width: fit-content  ;
+      max-width: 80%;
+      font-size: 0.9rem;
+      margin-top: 10px;
+      &:first-child{
+        margin: 0;
+      }
+    }
+
+    .left{
+      float: right;
+      background-color: var(--green);
+      color: var(--white);
     }
   }
 
   .sender {
-    width: 100%;
     padding: 10px 20px;
     background-color: var(--white);
-    position: fixed;
     bottom: 0;
 
     form {
       display: flex;
-      flex-wrap: nowrap;
       align-items: center;
       gap: 15px;
     }
 
+    img{
+      cursor: pointer;
+    }
+
     textarea {
+      width: auto;
       height: 36px;
       padding-top: 8px;
       padding-left: 10px;
@@ -286,7 +310,6 @@ nav {
       outline: none;
       border: 1px solid transparent;
       border-radius: 12px;
-      width: 60%;
       background-color: var(--light-white);
       transition: 0.3s;
       max-height: 25dvh;
