--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   display: flex;
 }
 
+li {
+  list-style: none;
+}
+
 :root {
   --white: #fff;
   --light-white: #fafafa;
@@ -353,4 +357,84 @@ nav .bottom button img {
 }
 .user-infos .infos .username .right p:hover {
   text-decoration: underline;
+}
+
+.fixer {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: none;
+  z-index: 500;
+}
+
+.settings {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: start;
+  padding-top: 100px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  transition: 0.5s;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.2);
+}
+.settings .container {
+  width: 400px;
+  padding: 15px;
+  background-color: var(--white);
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  z-index: 999;
+  animation: setting 0.5s;
+}
+@keyframes setting {
+  from {
+    transform: translateY(-130%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+.settings .container .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.settings .container .top img {
+  width: 12px;
+  cursor: pointer;
+}
+.settings .container .user-profile {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.settings .container .user-profile img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+.settings .container .user-profile span {
+  color: var(--medium-black);
+}
+.settings .container ul li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.settings .container ul li:hover {
+  background-color: var(--light-black);
+}
+.settings .container ul li img {
+  fill: var(--green) !important;
 }/*# sourceMappingURL=style.css.map */
