--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,10 @@ body {
   display: flex;
 }
 
+li{
+  list-style: none;
+}
+
 :root {
   --white: #fff;
   --light-white: #fafafa;
@@ -384,6 +388,92 @@ nav {
 
       &:hover{
         text-decoration: underline;
+      }
+    }
+  }
+}
+
+.fixer{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: none;
+  z-index: 500;
+}
+
+// settings
+
+.settings{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: start;
+  padding-top: 100px;
+  user-select: none;
+  transition: 0.5s;
+  z-index: 100;
+  background: rgba(0, 0 , 0 ,0.2);
+  .container{
+    width: 400px;
+    padding: 15px;
+    background-color: var(--white);
+    border-radius: 12px ;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    z-index: 999;
+    
+    animation: setting 0.5s;
+    
+    @keyframes setting {
+      from{
+        transform: translateY(-130%);
+      }
+      to{
+        transform: translateY(0);
+      }
+    }
+    .top{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      img{
+        width: 12px;
+        cursor: pointer;
+      }
+    }
+    .user-profile{
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      img{
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+      }
+      span{
+        color: var(--medium-black);
+      }
+    }
+    ul{
+      li{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: 0.3s;
+
+        &:hover{
+          background-color: var(--light-black);
+        }
+        img{
+          // width: 18px;
+          fill: var(--green) !important;
+        }
       }
     }
   }
