--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,7 @@ li{
   --medium-black: #8c8c8cff;
   --gray: rgba(244, 244, 247, 1);
   --green: #27ae60;
+  --light-red: #ff1a1a;
 }
 
 button {
@@ -473,6 +474,38 @@ nav {
         img{
           // width: 18px;
           fill: var(--green) !important;
+        }
+      }
+    }
+  }
+}
+
+.logout{
+  align-items: center;
+  padding: 0;
+  .container{
+    span{
+      font-size: 0.9rem;
+      color: var(--medium-black);
+    }
+    .btns{
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      gap: 10px;
+      button{
+        padding: 5px 10px;
+        color: var(--white);
+        border-radius: 5px;
+        font-size: 1rem;
+
+        &:first-child{
+          background-color: var(--medium-black);
+        }
+
+        &:last-child{
+          background-color:var(--light-red) ;
         }
       }
     }
